# Movie-sentiment-analysis

./: LICENSE  MovieSentimentAnalysis.ipynb  MovieSentimentAnalysis_AdvancedKagglePipeline.ipynb  README.md  movieReviews.csv  pyproject.toml  requirements.txt
scripts/: run_classical_pipeline.py  run_transformer_pipeline.py
src/movie_sentiment/: __init__.py  config.py
src/movie_sentiment/data/: __init__.py  augmentation.py  loader.py  preprocessing.py  schemes.py
src/movie_sentiment/evaluation/: __init__.py  metrics.py  plots.py
src/movie_sentiment/features/: __init__.py  vectorizers.py
src/movie_sentiment/models/: __init__.py  base.py  classical.py  neural.py  transformer.py
src/movie_sentiment/pipelines/: __init__.py  classical_pipeline.py  transformer_pipeline.py
src/movie_sentiment/utils/: __init__.py  io.py  seed.py
tests/: test_preprocessing.py  test_schemes.py
